{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 8,
  "lineage": "bc375f1f-bded-69d6-e355-fbbc0cc64839",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0136735c2bb5cf5bf",
            "arn": "arn:aws:ec2:us-east-1:575108950561:instance/i-0aaea1938ceb3f28e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aaea1938ceb3f28e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops9x",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f931cf3b755ed23",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-3-239-200-48.compute-1.amazonaws.com",
            "public_ip": "3.239.200.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0190a55c2e7fc6212",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bea9c8fe2433899",
            "tags": {
              "Name": "devstack-instance"
            },
            "tags_all": {
              "Name": "devstack-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07eba2df841735d8b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.devstack",
            "aws_security_group.devstack",
            "aws_subnet.devstack",
            "aws_vpc.devstack",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108950561:internet-gateway/igw-047573ab3e2248f4f",
            "id": "igw-047573ab3e2248f4f",
            "owner_id": "575108950561",
            "tags": {
              "Name": "devstack-igw"
            },
            "tags_all": {
              "Name": "devstack-igw"
            },
            "vpc_id": "vpc-026615f7ac84646c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devstack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108950561:route-table/rtb-01ac6058857ded3fc",
            "id": "rtb-01ac6058857ded3fc",
            "owner_id": "575108950561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047573ab3e2248f4f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devstack-rt"
            },
            "tags_all": {
              "Name": "devstack-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-026615f7ac84646c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devstack",
            "aws_vpc.devstack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059fedb36dfce41a8",
            "route_table_id": "rtb-01ac6058857ded3fc",
            "subnet_id": "subnet-02bea9c8fe2433899"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devstack",
            "aws_route_table.devstack",
            "aws_subnet.devstack",
            "aws_vpc.devstack",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108950561:security-group/sg-07eba2df841735d8b",
            "description": "Security group for DevStack EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07eba2df841735d8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cinder API",
                "from_port": 8776,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8776
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Glance API",
                "from_port": 9292,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9292
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Keystone API",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Neutron API",
                "from_port": 9696,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9696
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nova API",
                "from_port": 8774,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8774
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "novnc",
                "from_port": 6080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6080
              }
            ],
            "name": "devstack-sg",
            "name_prefix": "",
            "owner_id": "575108950561",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devstack-sg"
            },
            "tags_all": {
              "Name": "devstack-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-026615f7ac84646c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devstack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108950561:subnet/subnet-02bea9c8fe2433899",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bea9c8fe2433899",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "575108950561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devstack-subnet"
            },
            "tags_all": {
              "Name": "devstack-subnet"
            },
            "vpc_id": "vpc-026615f7ac84646c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devstack",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108950561:vpc/vpc-026615f7ac84646c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055d573c4693407a1",
            "default_route_table_id": "rtb-0a7a0e7189abdf5d3",
            "default_security_group_id": "sg-0f335c9562c694928",
            "dhcp_options_id": "dopt-0b6985a933a10b6ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026615f7ac84646c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a7a0e7189abdf5d3",
            "owner_id": "575108950561",
            "tags": {
              "Name": "devstack-vpc"
            },
            "tags_all": {
              "Name": "devstack-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}